# Yahboom_DOFBot-Arm

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  RoboControl.py  ToDo  attach_dofbot_usb.bat  host_camera_streamer.py  requirements-jazzy.txt  robocontrol_bootstrap.py  robocontrol_gui.py  start_robocontrol_container_gui.ps1  start_robocontrol_container_gui.sh  walkthrough.md
.testvoice/: pyvenv.cfg
config/: llm_controller.example.json
doc/: Architecture.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
models/: speech_input.py
ros2_jazzy_ws/: MIGRATION_JAZZY.md  requirements-jazzy.txt  ros2_py312.sh
ros2_jazzy_ws/.host-libs/: libgphoto2.so.6  libgphoto2_port.so.12.2.0  libopencv_cvv.so.4.6.0  libopencv_datasets.so.406  libopencv_dnn_objdetect.so.4.6.0  libopencv_dpm.so.4.6.0  libopencv_superres.so.4.6.0  libopencv_videostab.so.406  libopencv_xobjdetect.so.4.6.0
ros2_jazzy_ws/install/: local_setup.sh  setup.sh
ros2_jazzy_ws/install/arm_mediapipe/share/arm_mediapipe/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/install/dofbot_color_follow/share/dofbot_color_follow/: HSV_config.txt  haarcascade_frontalface_default.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/install/dofbot_color_identify/share/dofbot_color_identify/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/install/dofbot_color_stacking/share/dofbot_color_stacking/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/install/dofbot_config/share/dofbot_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros2_jazzy_ws/install/dofbot_face_follow/share/dofbot_face_follow/: haarcascade_frontalface_default.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/install/dofbot_garbage_yolov5/share/dofbot_garbage_yolov5/: XYT_config.txt  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  model.pt  model0.pt  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_jazzy_ws/src/arm_mediapipe/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/arm_mediapipe/scripts/: media_library.py  msgToimg.py  roboarm_bridge.py
ros2_jazzy_ws/src/dofbot_color_follow/: CMakeLists.txt  color_follow.py  face_follow.py  package.xml  positioning.py  ╔л┐щ╢и╬╗.ipynb  ╙я╥Ї╩╢▒Ё─┐▒ъ╫╖╫┘.ipynb  ╤╒╔л╫╖╫┘color_follow.ipynb
ros2_jazzy_ws/src/dofbot_color_identify/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_color_identify/scripts/: HSV╨г╫╝HSV_calibration.ipynb  identify_grap.py  identify_target.py  speech_identify_target.py  ╤╒╔л╖╓╝Ёcolor_identify.ipynb
ros2_jazzy_ws/src/dofbot_color_stacking/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_color_stacking/scripts/: stacking_grap.py  stacking_target.py
ros2_jazzy_ws/src/dofbot_config/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_face_follow/: CMakeLists.txt  dofbot_config.py  face_follow.py  face_pose.py  package.xml
ros2_jazzy_ws/src/dofbot_garbage_yolov5/: CMakeLists.txt  dofbot_config.py  garbage_grap.py  garbage_identify.py  package.xml  single_garbage_identify.py  speech_garbage.py  speech_garbage_identify.py  └м╗°╖╓╝Ё═ц╖иGarbage_sorting_play.ipynb
ros2_jazzy_ws/src/dofbot_garbage_yolov5/models/: yolo.py
ros2_jazzy_ws/src/dofbot_garbage_yolov5/utils/: general.py
ros2_jazzy_ws/src/dofbot_info/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_info/launch/: dofbot_server.launch
ros2_jazzy_ws/src/dofbot_info/scripts/: kinemarics_server.py
ros2_jazzy_ws/src/dofbot_info/src/: dofbot_server.cpp
ros2_jazzy_ws/src/dofbot_info/srv/: Kinemarics.srv
ros2_jazzy_ws/src/dofbot_mediapipe/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_mediapipe/scripts/: 05_FaceEyeDetection.py
ros2_jazzy_ws/src/dofbot_moveit/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_moveit/scripts/: 01_set_move.py  02_motion_plan.py  03_attached_object.py  1.py  2.py  3.py  4.py  5.py
ros2_jazzy_ws/src/dofbot_moveit/src/: dofbot_kinematics_fk.cpp  dofbot_kinematics_ik.cpp
ros2_jazzy_ws/src/dofbot_snake_follow/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_snake_follow/scripts/: HSV╨г╫╝HSV_calibration.ipynb  snake_ctrl.py  snake_move.py  snake_target.py  ╥¤╔▀│Ў╢┤snake_follow.ipynb
ros2_jazzy_ws/src/dofbot_visual/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/dofbot_visual/AR/: simple_AR.py
ros2_jazzy_ws/src/dofbot_visual/Marker/: Thumbs.db
ros2_jazzy_ws/src/dofbot_visual/detection/: target_detection.py
ros2_jazzy_ws/src/dofbot_visual/scripts/: astra_image_flip.py  astra_rgb_image.py  laser_to_image.py
ros2_jazzy_ws/src/dofbot_visual/src/: get_rgb_image.cpp
ros2_jazzy_ws/src/yahboomcar_description/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/yahboomcar_msgs/: CMakeLists.txt  package.xml
ros2_jazzy_ws/src/yahboomcar_msgs/msg/: Position.msg
ros2_jazzy_ws/test/: RoboControl.py  move_arm_up.py  test_camera.py
src/arm_mediapipe/: CMakeLists.txt  package.xml
src/arm_mediapipe/launch/: docker_stack.launch.py
src/arm_mediapipe/scripts/: llm_controller.py  requirements.txt  roboarm_bridge.py  speech_input.py  tool_executor.py
src/dofbot_mediapipe/: CMakeLists.txt  package.xml
src/dofbot_mediapipe/scripts/: 02_PoseDetector.py  04_FaceMesh.py  07_FaceDetection.py  08_GestureDetection.py  camera_driver.py
src/testing/: analyze_wav.py  test_cam_swap.py  test_container_cam.py  test_mic.py  test_vosk_resample.py  test_win_cam.py  vosk_terminal_test.py  vosk_terminal_test_old.py
(+522 files in other folders)
