<?xml version="1.0"?>
<package format="3">
  <name>dofbot_face_follow</name>
  <version>0.1.0</version>
  <description>Face follow demos and control scripts for Dofbot in ROS2.</description>

  <maintainer email="chen@todo.todo">chen</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
