<?xml version="1.0"?>
<package format="3">
  <name>dofbot_garbage_yolov5</name>
  <version>0.1.0</version>
  <description>Garbage detection and grasp pipeline for Dofbot using YOLO models.</description>

  <maintainer email="chen@todo.todo">chen</maintainer>
  <maintainer email="porting@todo.todo">ros2-porting</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dofbot_info</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
